Fixed z-index in the about section

--- a/style/_about_section.scss
+++ b/style/_about_section.scss
@@ -33,6 +33,8 @@
     #text-container {
         width: 30%;
 
+        z-index: 2;
+
         p {
             margin-bottom: $regular-text-size;
 
